--- a/vueApi2/style.css
+++ b/vueApi2/style.css
@@ -7,25 +7,8 @@ h1{
     margin-right: 15%;
 }
 
-.contenepdorRespuesta{
-    margin-left: 12%;
-    margin-right: 12%;
-    border: black 1px solid;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-.imagenRespuesta{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 360px;
-    width: 560px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.contenedorBig{
-    display: none;
+.contenedorRta{
+    border: 2px blue solid;
+    margin-left: 15%;
+    margin-right: 15%;
 }
